refactor(craft,gui,paper-1_21): use SequencedCollection#getFirst